# altv-installer-for-linux

./: CMakeLists.txt  Main.qml  README.md  TitleBar.qml  configuration.cpp  configuration.h  downloaderinstaller.cpp  downloaderinstaller.h  main.cpp  utilities.h
components/: FolderPickerButton.qml  InstallerButtonLeft.qml  InstallerButtonRight.qml  InstallerCheckBox.qml  InstallerDropDown.qml  InstallerPlatformButton.qml  InstallerProgressBar.qml  InstallerRadioButton.qml  StackViewComponent.qml  TitleBar.qml
pages/: ConfirmPage.qml  DownloadPage.qml  GameLocationPage.qml  InstallLocationPage.qml  ShortcutsPage.qml
